# ai-agent-from-scratch

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  pyproject.toml
agents/agent-001-echo-loop/: agent.py  test_agent.py
agents/agent-004-system-prompt/: agent.py  conftest.py  test_agent.py
agents/agent-006-tool-result-loop/: agent.py  conftest.py  test_agent.py
agents/agent-007-multi-tool-dispatch/: agent.py  conftest.py  test_agent.py
agents/agent-008-malformed-tool-call-handling/: agent.py  conftest.py  test_agent.py
agents/agent-009-knowledge-tools/: agent.py  conftest.py  test_agent.py
agents/agent-010-context-compaction/: agent.py  conftest.py  test_agent.py
agents/agent-011-subagents/: agent.py  conftest.py  test_agent.py
agents/agent-012-evals-and-tracing/: agent.py  conftest.py  test_agent.py
agents/agent-013-capstone/: agent.py  conftest.py  test_agent.py
docs/: _config.yml  index.md
docs/_posts/: 2026-06-24-agent-000-introduction.md  2026-06-25-agent-001-echo-loop.md  2026-06-26-agent-002-llm-call.md  2026-06-27-agent-003-conversation-history.md  2026-06-28-agent-004-system-prompt.md  2026-06-29-agent-005-single-tool-call.md  2026-06-30-agent-006-tool-result-loop.md  2026-07-01-agent-007-multi-tool-dispatch.md  2026-07-02-agent-008-malformed-tool-call-handling.md  2026-07-03-agent-009-knowledge-tools.md  2026-07-09-agent-010-context-compaction.md  2026-07-11-agent-011-subagents.md  2026-07-11-agent-012-evals-and-tracing.md  2026-07-12-agent-013-capstone.md
docs/fr/: index.md
docs/fr/_posts/: 2026-06-24-agent-000-introduction-fr.md  (+13 more)
