[project]
name = "ai-agent-series"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.112.0",
    "numpy>=2.4.6",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
